--- a/resources/Info.plist
+++ b/resources/Info.plist
@@ -25,6 +25,6 @@
 	<key>GrowlPluginDescription</key>
 	<string>A Growl plugin for Mountian Lions User Notifications</string>
 	<key>NSPrincipalClass</key>
-	<string>GrowlSampleDisplay</string>
+	<string>MountainGrowlDisplay</string>
 </dict>
 </plist>
