--- a/resources/Info.plist
+++ b/resources/Info.plist
@@ -17,6 +17,8 @@
 	<key>CFBundleSignature</key>
 	<string>GRRR</string>
 	<key>CFBundleVersion</key>
+	<string>0.1rc1</string>
+	<key>CFBundleShortVersionString</key>
 	<string>0.1</string>
 	<key>CSResourcesFileMapped</key>
 	<string>yes</string>
